# wirlwind

./: README.md  README_Driver_Dev.md  README_Next.md  README_Telemetry_arch.md  demo.html  pyproject.toml  test_parser_chain.py
tests/: __init__.py
wirlwind/connection/: __init__.py  profile.py
wirlwind/manager/: __init__.py  connect_dialog.py  editor.py  io.py  models.py  settings.py  tree.py
wirlwind/vault/: __init__.py  credential_manager.py  keychain.py  manager_ui.py  profile.py  resolver.py  store.py
wirlwind_telemetry/: __init__.py  __main__.py  auth_interface.py  bridge.py  client.py  parse_trace.py  parser_chain.py  poll_engine.py  ssh_client.py  state_store.py  template_loader.py  widget.py
wirlwind_telemetry/collections/cpu/: arista_eos.yaml
wirlwind_telemetry/collections/interfaces/: _schema.yaml  arista_eos.yaml  cisco_ios.yaml  cisco_ios_xe.yaml
wirlwind_telemetry/collections/log/: arista_eos.yaml
wirlwind_telemetry/collections/neighbors/: juniper_junos.yaml
wirlwind_telemetry/dashboard/: index.html
wirlwind_telemetry/drivers/: __init__.py  arista_eos.py  cisco_ios.py  cisco_nxos.py  juniper_junos.py
wirlwind_telemetry/templates/bgp_summary/: arista_eos.yaml  cisco_ios_xe.yaml  juniper_junos.yaml
wirlwind_telemetry/templates/cpu/: arista_eos.yaml  cisco_ios_xe.yaml  juniper_junos.yaml
wirlwind_telemetry/templates/environment/: cisco_ios_xe.yaml
wirlwind_telemetry/templates/interface_detail/: cisco_ios_xe.yaml
wirlwind_telemetry/templates/interfaces/: arista_eos.yaml  cisco_ios_xe.yaml  juniper_junos.yaml
(+10 files in other folders)
